# slab

./: CMakeLists.txt  LICENSE  README.md  slab.h
examples/: iterator.cpp  owning.cpp  polymorph.cpp  simple.cpp
tests/: tests.cpp
